streamline MainController
* extract methods
* extract anonymous classes